# fourier-cpp-sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
amber/include/: aios.h
amber/lib/win_x64/: amber.lib
doc/: Doxyfile
doc/html/: annotated.html  annotated_dup.js  class_amber_1_1_group-members.html  class_amber_1_1_group.html  class_amber_1_1_group_command-members.html  class_amber_1_1_group_command.html  class_amber_1_1_group_feedback-members.html  class_amber_1_1_group_feedback.html  class_amber_1_1_lookup-members.html  class_amber_1_1_lookup.html  class_amber_1_1_lookup_1_1_entry_list-members.html  class_amber_1_1_lookup_1_1_entry_list.html  class_fourier_1_1_group-members.html  class_fourier_1_1_group.html  class_fourier_1_1_group.js  class_fourier_1_1_group_command-members.html  class_fourier_1_1_group_command.html  class_fourier_1_1_group_command.js  class_fourier_1_1_group_feedback-members.html  class_fourier_1_1_group_feedback.html  class_fourier_1_1_group_feedback.js  class_fourier_1_1_lookup-members.html  class_fourier_1_1_lookup.html  class_fourier_1_1_lookup.js  class_fourier_1_1_lookup_1_1_entry_list-members.html  class_fourier_1_1_lookup_1_1_entry_list.html  class_fourier_1_1_version_number-members.html  class_fourier_1_1_version_number.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  group_8hpp_source.html  group_command_8hpp_source.html  group_feedback_8hpp_source.html  (+9 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  class_amber_1_1_group.tex  class_amber_1_1_group_command.tex  class_amber_1_1_group_feedback.tex  class_amber_1_1_lookup.tex  class_amber_1_1_lookup_1_1_entry_list.tex  class_fourier_1_1_group.tex  class_fourier_1_1_group_command.tex  class_fourier_1_1_group_feedback.tex  class_fourier_1_1_lookup.tex  class_fourier_1_1_lookup_1_1_entry_list.tex  class_fourier_1_1_version_number.tex  files.tex  group_8hpp_source.tex  group_command_8hpp_source.tex  group_feedback_8hpp_source.tex  lookup_8hpp_source.tex  md__d__ws__fourier_fourier_cpp__r_e_a_d_m_e.tex  refman.tex  util_8hpp_source.tex  version_8hpp_source.tex
examples/project/cmake/: CMakeLists.txt
examples/src/: 01_lookup.cpp  02_playback.cpp  03_feedback.cpp  04_command.cpp  05_feedback_command_async.cpp  05_latency_test.cpp  07_set_position_pt.cpp
fourier/include/: aios.h
fourier/lib/win_x64/: fourier.lib
src/: group.cpp  group.hpp  groupCommand.cpp  groupCommand.hpp  groupFeedback.cpp  groupFeedback.hpp  lookup.cpp  lookup.hpp  util.hpp  version.cpp  version.hpp
